CS text mode part 2 warp